# construct

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gallery.md  install.sh
crates/protocol/: Cargo.toml
crates/protocol/src/: adapter.rs  agent_context.rs  dialect.rs  jsonrpc.rs  lib.rs  paths.rs  slash.rs  transport.rs
crates/protocol/src/adapter/: policy.rs  pty.rs
docs/: RELEASING.md  architecture.md  configuration.md  generative-widgets.md  harnesses.md  mcp.md  memory.md  midi.md  program-verbs.md  program.md  remote-control.md  smith.md  unified-tool-layer.md  workflows.md  zarvis.md
examples/: config.toml
scripts/: smoke.sh  test_agent.sh  test_agentd.sh  test_construct.sh
specs/: 0001-sessions-are-the-core-unit.md  0002-orchestrator-is-a-session.md  0003-session-widgets-are-ui-state.md  0004-widget-renderers-own-interaction.md  0005-reconnect-must-preserve-live-terminal-state.md  0006-resize-and-restart-avoid-full-history-refeed.md  0007-session-list-actions-target-visible-user-sessions.md  0008-built-in-harness-command-overrides.md  0009-transient-provider-errors-are-retryable.md  0010-memory-is-durable-shared-context.md  0011-tooling-is-shared-across-harnesses.md  0012-clients-render-shared-pty-at-its-true-width.md  0012-workflows-are-controller-sessions.md  0013-tool-call-grouping-is-presentation-only.md  0014-subagents-are-parented-helpers.md  0015-approval-modes.md  0017-read-only-shell-runs-concurrently.md  0019-operator-widgets-use-matrix-rain-viewport.md  0020-operator-runs-ambiently.md  0031-session-archive.md  (+76 more)
(+166 files in other folders)
